--- a/public/index.html
+++ b/public/index.html
@@ -43,6 +43,7 @@
   <body class="h-100"  >
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div {scroll-snap-type: y mandatory} id="root" class="h-100"  ></div>
+    <script src="https://platform.linkedin.com/badges/js/profile.js" async defer type="text/javascript"></script>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
